<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_game"
            android:icon="@drawable/ic_menu_new_game"
            android:title="@string/new_game" />
        <item
            android:id="@+id/nav_join_game"
            android:icon="@drawable/ic_menu_join_game"
            android:title="@string/join_game" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/policy">
        <menu>
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_privacy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>